# jellystat

./: .gitignore  README.md  pyproject.toml
jellystat/: client.py  config.py  main.py  output.py  utils.py
jellystat/commands/: movies.py  seasons.py  server.py  shows.py  special.py
