[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jellystat"
version = "0.1.0"
description = "CLI tool for querying a Jellyfin media server"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "rich",
    "platformdirs",
]

[project.scripts]
jellystat = "jellystat.main:main"
